<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/navigate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.example.pm25.layout.NavigateLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </com.example.pm25.layout.NavigateLayout>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="vertical"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/matchScene"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellow_500"
                android:paddingBottom="16dp"
                android:paddingEnd="0dp"
                android:paddingStart="30dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/aqi"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:shadowColor="#555555"
                    android:shadowDx="0"
                    android:shadowDy="5.0"
                    android:shadowRadius="4.0"
                    android:text="140"
                    android:textSize="70sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/q_mark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/circle"
                    android:gravity="center"
                    android:height="22dp"
                    android:width="22dp" 
                    android:padding="0dp"
                    android:layout_marginEnd="38dp"
                    android:text="@string/q_mark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/pm_describe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pm"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-10dp"
                    android:text="三级（轻度污染）"
                    android:textSize="20sp" />

                <ViewFlipper
                    android:id="@+id/what_is_aqi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/q_mark" 
                    android:visibility="invisible"
                   >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@color/alpha_white"
                        android:padding="5dp"
                        android:text="@string/what_is_aqi" 
					/>
                </ViewFlipper>
                
            </RelativeLayout>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/matchScene"
                android:layout_marginTop="-14dp"
                android:paddingEnd="8dp"
                android:paddingStart="0dp"
                android:text="2015-05-02 14:00:00"
                android:textSize="12sp" />
            <View 
                android:id="@+id/aqi_btn"
                android:layout_width="48dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="30dp"
                android:layout_alignParentEnd="true"
                android:layout_height="48dp"
                android:layout_above="@id/time"
                />
            
            <LinearLayout
                android:id="@+id/suggestScene"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/matchScene"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="0dp"
                android:paddingEnd="10dp"
                android:paddingStart="20dp"
                android:paddingTop="18dp"
                android:textSize="16sp" >

                <TextView
                    style="@style/content_style"
                    android:text="@string/primary_pollutant_detail"
                    android:textStyle="bold" />

                <TextView
                    style="@style/title_style"
                    android:text="@string/aqi_effect" />

                <TextView
                    style="@style/content_style"
                    android:text="       空气质量可接受，但某些污染物可能对极少数异常敏感人群健康有较弱影响" />

                <TextView
                    style="@style/title_style"
                    android:text="@string/aqi_suggestion" />

                <TextView
                    style="@style/content_style"
                    android:text="       儿童、老年人及心脏病、呼吸系统疾病患者避免长时间、高强度的户外锻炼，一般人群适量减少户外运动" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/circleScene"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/suggestScene"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="16dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="16dp"
                    android:text="@string/showCircle"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/c1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <include
                        android:id="@+id/circle1"
                        layout="@layout/data_circle" />

                    <include
                        android:id="@+id/circle2"
                        layout="@layout/data_circle" />

                    <include
                        android:id="@+id/circle3"
                        layout="@layout/data_circle" />

                    <include
                        android:id="@+id/circle4"
                        layout="@layout/data_circle" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/c2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <include
                        android:id="@+id/circle5"
                        layout="@layout/data_circle" />

                    <include
                        android:id="@+id/circle6"
                        layout="@layout/data_circle" />

                    <include
                        android:id="@+id/circle7"
                        layout="@layout/data_circle" />
					
                    <include
                        android:id="@+id/circle8"
                        layout="@layout/data_circle" />
					
                </LinearLayout>
            </LinearLayout>

            <ViewFlipper
                    android:id="@+id/what_is_else"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/circleScene"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="-50dp"
                    android:visibility="invisible"
                   >
                    <TextView
                        android:id="@+id/elseText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@color/alpha_white"
                        android:padding="5dp"
                        android:text="@string/what_is_aqi" 
					/>
                </ViewFlipper>
            
            
            
        </RelativeLayout>
    </ScrollView>

</LinearLayout>